<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.csaper6.gameapp.MainActivity"
    android:weightSum="1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:layout_weight="0.38">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dealer_apos_s_hand"
            android:id="@+id/textView_dealer"
            android:layout_gravity="center_horizontal"
            android:textSize="30sp"
            android:textColor="#060606" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_dcard1"
                android:text="@string/card_1"
                android:textSize="20sp"
                android:textColor="#060505" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_2"
            android:id="@+id/textView_dcard2"
            android:textColor="#060606"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_3"
            android:id="@+id/textView_dcard3"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:textColor="#070505" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_4"
            android:id="@+id/textView_dcard4"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:textColor="#000000" />


    </LinearLayout>

    <FrameLayout
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.04">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/stay"
            android:id="@+id/button_stay" />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="right"
            android:text="@string/hit"
            android:id="@+id/button_hit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Points:"
            android:id="@+id/textView_points"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="#000000" />

    </FrameLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_weight="0.35">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_hand"
            android:id="@+id/textView_your"
            android:layout_gravity="center_horizontal"
            android:textColor="#050505"
            android:textSize="30sp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pcard_1"
                android:id="@+id/textView_pcard1"
                android:textSize="20sp"
                android:textColor="#000000"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pcard_2"
                android:id="@+id/textView_pcard2"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"
                android:textColor="#0c0b0b" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pcard_3"
                android:id="@+id/textView_pcard3"
                android:layout_gravity="center_horizontal"
                android:textColor="#030303"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pcard_4"
                android:id="@+id/textView_pcard4"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"
                android:textColor="#020202" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:weightSum="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pcard_5"
                    android:id="@+id/textView_pcard5"
                    android:textSize="20sp"
                    android:textColor="#040404"
                    android:layout_weight="0.31" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pcard_6"
                    android:id="@+id/textView_pcard6"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.25"
                    android:textColor="#040303"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pcard_7"
                    android:id="@+id/textView_pcard7"
                    android:layout_weight="0.17"
                    android:textSize="20sp"
                    android:textColor="#060606" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pcard_8"
                    android:id="@+id/textView_pcard8"
                    android:layout_weight="0.12"
                    android:textSize="20sp"
                    android:textColor="#070707" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:weightSum="1">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pcard_9"
                    android:id="@+id/textView_pcard9"
                    android:textIsSelectable="false"
                    android:textSize="20sp"
                    android:textColor="#070707"
                    android:layout_weight="0.49" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pcard_10"
                    android:id="@+id/textView_pcard10"
                    android:textSize="20sp"
                    android:textColor="#040404"
                    android:layout_weight="0.25" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pcard11"
                    android:id="@+id/textView_pcard11"
                    android:layout_weight="0.21"
                    android:textColor="#050505"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pcard_12"
                    android:id="@+id/textView_pcard12"
                    android:layout_weight="0.12"
                    android:textColor="#040404"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Game"
        android:id="@+id/button_ng"
        android:layout_gravity="center_horizontal" />

</LinearLayout>